# teaserver

./: .env  INSTRUCTIONS.md  README.md  config.toml  pyproject.toml  requirements.txt
arduino/: tea_robot.ino
backend/: arduino.py  config.py  gpio.py  llm.py  main.py
frontend/: config.html  index.html
frontend/css/: style.css
frontend/js/: config.js  main.js
